# wssql

./: .gitmodules  CMakeLists.txt  README.md  build-setup.sh
cmake_modules/: BuildANTLR3C.cmake  FindANTLR.cmake  FindANTLR3-RUNTIME.cmake  FindANTLR3C.cmake  FindANTLR4-RUNTIME.cmake  FindANTLR4.cmake  FindANTLR4CPP.cmake  FindSTRINGTEMPLATE4.cmake  generateLexerAndParser.cmake
esp/services/ws_sql/: CMakeLists.txt  ws_sqlService.cpp  ws_sqlService.hpp
esp/services/ws_sql/SQL2ECL/: ECLEngine.cpp  ECLEngine.hpp  ECLFunction.cpp  HPCCFile.cpp  HPCCFile.hpp  HPCCFileCache.cpp  HPCCFileCache.hpp  HPCCSQLTreeWalker.cpp  HPCCSQLTreeWalker.hpp  SQLColumn.cpp  SQLColumn.hpp  SQLExpression.cpp  SQLExpression.hpp  SQLJoin.cpp  SQLJoin.hpp  SQLTable.hpp
esp/services/ws_sql/SQL2ECL/grammars/: HPCCSQL.g4  HPCCSQLLexer.g4  HPCCSQLParser.g4  WSSQLLexer.g4  WSSQLParser.g4
esp/services/ws_sql/sql2ecl/: HPCCSQLListener.cpp  HPCCSQLListener.hpp  SQLObject.cpp  SQLObject.hpp  ws_sql.cpp  wssql_test.cpp
esp/services/ws_sql/sql2ecl/grammars/: HPCCSQLLexer.g4  HPCCSQLParser.g4  MySQLLexer.g4  MySQLParser.g4  MySQLParser.g4.old
