################################################################################
#    HPCC SYSTEMS software Copyright (C) 2014 HPCC Systems.
#
#    Licensed under the Apache License, Version 2.0 (the "License");
#    you may not use this file except in compliance with the License.
#    You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS,
#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#    See the License for the specific language governing permissions and
#    limitations under the License.
################################################################################
# Component: ws_sql
#
# Description:
#    Cmake Input File for ws_sql
################################################################################

project(ws_sql)
include(${HPCC_WSSQL_SOURCE_DIR}/esp/scm/additional.cmake)

find_package(ANTLR4 REQUIRED)
antlr4_target(hpccsql
    GRAMMAR_PREFIX HPCCSQL
    LANGUAGE Cpp
    DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
    GRAMMAR_FILES
        ${CMAKE_CURRENT_SOURCE_DIR}/SQL2ECL/grammars/HPCCSQLLexer.g4
        ${CMAKE_CURRENT_SOURCE_DIR}/SQL2ECL/grammars/HPCCSQLParser.g4
    GENERATE_VISITOR
    )

set(SRCS
    ${ESPSCM_GENERATED_DIR}/ws_sql_esp.cpp
    ws_sqlPlugin.cpp
    ws_sqlService.cpp
    SQL2ECL/HPCCFileCache.cpp
    SQL2ECL/HPCCFile.cpp
    SQL2ECL/ECLFunction.cpp
    SQL2ECL/ECLEngine.cpp
    SQL2ECL/SQLColumn.cpp
    SQL2ECL/SQLTable.hpp
    SQL2ECL/SQLExpression.cpp
    SQL2ECL/SQLJoin.cpp
    SQL2ECL/HPCCSQLTreeWalker.cpp
    ${ANTLR4_hpccsql_SOURCES}
    )

include_directories(
    ${CMAKE_BINARY_DIR}
    ${CMAKE_BINARY_DIR}/oss
    ${ESPSCM_GENERATED_DIR}
    ${HPCC_WSSQL_SOURCE_DIR}/esp/services/ws_sql/SQL2ECL
    ${HPCC_SOURCE_DIR}/esp/bindings
    ${HPCC_SOURCE_DIR}/esp/bindings/SOAP/xpp
    ${HPCC_SOURCE_DIR}/esp/smc/SMCLib
    ${HPCC_SOURCE_DIR}/esp/platform
    ${HPCC_SOURCE_DIR}/esp/services
    ${HPCC_SOURCE_DIR}/esp/services/ws_ecl
    ${HPCC_SOURCE_DIR}/esp/services/ws_workunits
    ${HPCC_SOURCE_DIR}/esp/services/ws_dfu
    ${HPCC_SOURCE_DIR}/system/xmllib
    ${HPCC_SOURCE_DIR}/system/include
    ${HPCC_SOURCE_DIR}/system/jlib
    ${HPCC_SOURCE_DIR}/system/security/shared
    ${HPCC_SOURCE_DIR}/system/security/securesocket
    ${HPCC_SOURCE_DIR}/system/security/zcrypt
    ${HPCC_SOURCE_DIR}/system/security/LdapSecurity
    ${HPCC_SOURCE_DIR}/system/mp
    ${HPCC_SOURCE_DIR}/dali/dfu
    ${HPCC_SOURCE_DIR}/dali/base/
    ${HPCC_SOURCE_DIR}/common/workunit
    ${HPCC_SOURCE_DIR}/common/remote
    ${HPCC_SOURCE_DIR}/common/environment
    ${HPCC_SOURCE_DIR}/common/wuwebview
    ${HPCC_SOURCE_DIR}/common/fileview2
    ${HPCC_SOURCE_DIR}/common/dllserver
    ${HPCC_SOURCE_DIR}/common/deftype
    ${HPCC_SOURCE_DIR}/ecl/hql
    ${CMAKE_SOURCE_DIR}/antlr4/runtime/Cpp/runtime/src
    ${CMAKE_SOURCE_DIR}/antlr4/runtime/Cpp/runtime/src/atn
    ${CMAKE_SOURCE_DIR}/antlr4/runtime/Cpp/runtime/src/dfa
    ${CMAKE_SOURCE_DIR}/antlr4/runtime/Cpp/runtime/src/misc
    ${CMAKE_SOURCE_DIR}/antlr4/runtime/Cpp/runtime/src/support
    ${CMAKE_SOURCE_DIR}/antlr4/runtime/Cpp/runtime/src/tree
    ${CMAKE_SOURCE_DIR}/antlr4/runtime/Cpp/runtime/src/tree/pattern
    ${CMAKE_SOURCE_DIR}/antlr4/runtime/Cpp/runtime/src/tree/xpath
    )

add_definitions(-D_USRDLL)
add_library(ws_sql SHARED ${SRCS})
set_target_properties(ws_sql PROPERTIES
    CXX_STANDARD 11
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
    )
add_dependencies(ws_sql wssqlespscm hpccsql)
target_link_libraries(
    ws_sql
    ws_workunits
    ws_ecl
    ws_dfu
    jlib
    xmllib
    esphttp
    securesocket
    dalibase
    antlr4_shared
    )

install(
    TARGETS ws_sql
    LIBRARY DESTINATION ${LIB_DIR}
    COMPONENT Runtime
    )
install(FILES ${CMAKE_SOURCE_DIR}/antlr4/LICENSE.txt
    DESTINATION .
    RENAME antlr4cpp-license.txt
    )
